force-app/main/default/objects/PMC_CPQ_Cadence__c/PMC_CPQ_Cadence__c.object-meta.xml
<CustomObject>
    <description>This object is created to show Product availability information</description>
    <label>Cadence</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Cadence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>