force-app/main/default/objects/PMC_CPQ_Cadence__c/fields/PMC_CPQ_ConfirmedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ConfirmedDate__c</fullName>
    <label>Confirmed Date</label>
    <type>Date</type>
</CustomField>