force-app/main/default/objects/PMC_CPQ_Cadence__c/fields/PMC_CPQ_QuoteLine__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_QuoteLine__c</fullName>
    <description>Determines the Quote line associated to the cadence</description>
    <label>Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Cadences</relationshipLabel>
    <relationshipName>Cadences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>