force-app/main/default/objects/PMC_CPQ_Cadence__c/fields/PMC_CPQ_RequestedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestedDate__c</fullName>
    <label>Requested Date</label>
    <type>Date</type>
</CustomField>