force-app/main/default/objects/PMC_CPQ_Cadence__c/fields/PMC_CPQ_RequestedQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_RequestedQuantity__c</fullName>
    <label>Requested Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>